--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.49.1",
     "bcryptjs": "^3.0.2",
     "next": "15.1.7",
     "next-auth": "5.0.0-beta.25",
